# NVIDIA-tx2-

./: .gitignore  README.md
Git_doc/: cuda.md  driver.md  runtime.md  train.md  video_inference.md  videodecode.md
Neurtal-network/video/: CMakeLists.txt
Neurtal-network/video/mask_cnn/: CMakeLists.txt  main.cpp  plugin.h
Neurtal-network/video/util/: CMakeLists.txt  common.h
Neurtal-network/video/util/cammer/: camer.cpp  camer.h  gstutility.cpp
Neurtal-network/video/util/cuda/: cudamemory.cu  cudamemory.h  cudargb.cu  cudargb.h  cudayolo.cu  cudayolo.h
Neurtal-network/video/util/display/: display.cpp  display.h  texture.cpp  texture.h
Neurtal-network/video/yolo/: CMakeLists.txt  main.cpp
Neurtal-network/video/yolo/network/: pluginfactory.cpp  pluginfactory.h  trtutils.cpp  trtutils.h  yolo.cpp  yolo.cpp.autosave  yolo.h
Sdk_platform/Linux_for_Tegra/: apply_binaries.sh  build_l4t_bup.sh  flash.sh  jetson-tx2-as-4GB.conf  jetson-tx2.conf  jetson-tx2i.conf  jetson-xavier.conf  p2771-0000-as-0888.conf  p2771-0000-devkit.conf  p2771-0000-dsi-hdmi-dp.conf  p2771-0000.conf.common  p2771-3489-ucm1.conf  p2771-3489-ucm2.conf  p2972-0000-devkit-maxn.conf  p2972-0000-devkit-slvs-ec.conf  p2972-0000-devkit.conf  p2972-0000.conf.common
Sdk_platform/Linux_for_Tegra/bootloader/: BUP_generator.py  LICENSE.bpmp_t194  camera-rtcpu-rce.img  camera-rtcpu-sce.img  l4t_bup_gen.func  mkbctpart  nv_smd_generator  smd_info.cfg  sw_memcfg_overlay.pl  tegra186-bpmp-quill-p3310-1000-a00-00.dtb  tegrabct_v2  tegradevflash_v2  tegraflash_internal.py  tegrahost_v2  tegraparser_v2  (+6 more)
(+88 files in other folders)
